# csm

./: .gitignore  README.md  csm.h  example.cpp  state_machine.h
benchmarks/: CMakeLists.txt  benchmarks.cpp
examples/: events.cpp  law_abiding_npc.cpp  npc.cpp  states.cpp
include/: csm.h
lib/catch/: catch.hpp
tests/: CMakeLists.txt  mocks.h  test_helpers.h  tests.cpp  transition_table.h
tests/detail/: handler_mock.h  required_calls.h  transition_checker.h
